2007-11-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix when renaming or moving a local folder. Not all of its sub-
	folders where recreated (if the flags where 0, CamelStore's 
	camel_store_get_folder_info returned an iter with only one child in it.
	Either it should return no childs or all childs. I adapted Tinymail to
	request all childs. This is tny-camel-folder.c:3084 (under the was_new
	if). Please keep an eye on this one!

2007-11-01  Philip Van Hoof  <pvanhoof@gnome.org>

	* GHost items when renaming a local folder, fixed
	* Date-Received date = Date header for messages that never got
	received (like newly created messages in a Draft folder)
	* Introduction of tny_gtk_folder_store_tree_model_stop_observing
	* Introduced locking for OpenSSL
	* Added a virtual create_header_view_func to TnyGtkMsgView

	* This was a minor API change

2007-10-31  Alberto Garcia Gonzalez <agarcia@igalia.com>

	* Ignore priority flags in tny_camel_msg_header_unset_flag()
	* Remove the X-Priority header in set_prio_mask() instead of
	tny_camel_msg_header_set_flag()

2007-10-31  Philip Van Hoof  <pvanhoof@gnome.org>

	* \NoSelect folders should never get a STATUS request, fixed
	* Documentation clarification about priority and flags
	* Renamed tny_header_set_flags to set_flag, same for unset
	* Lowered the number of TOPs before incrementally filling up of the
	headers model happens for POP

	* This was a major API change

2007-10-30  Philip Van Hoof  <pvanhoof@gnome.org>

	* Improvements to the AUTHORS file. Authors can obviously notify
	me if they want their description improven or removed.
	* Using the SSL negotiated timeout time for IDLE's recycle (undone)
	* Undone last timeout change, set it to 27 minutes fixed for IMAP
	
2007-10-29  Jose Dapena Paz  <jdapena@igalia.com>

	* Fix: now we don't unset the priority flag on setting or
	  unsetting other flags.

2007-10-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of tny_gtk_msg_window_set_view
