@@ -1,5 +1,10 @@
 2007-11-05  Philip Van Hoof  <pvanhoof@gnome.org>
 
+	* Merged with upstream Camel revision 8186
+	* Merged bugfix http://bugzilla.gnome.org/show_bug.cgi?id=430420
+
+2007-11-05  Philip Van Hoof  <pvanhoof@gnome.org>
+
 	* Bugfix when renaming or moving a local folder. Not all of its sub-
 	folders where recreated (if the flags where 0, CamelStore's 
 	camel_store_get_folder_info returned an iter with only one child in it.
